<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg"
    android:orientation="vertical">

    <include
        layout="@layout/titlebar_scan_md"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tv_billType"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_height"
            android:gravity="center"
            android:text="入库单"
            />

        <TextView
            android:id="@+id/tv_billStatus"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_height="@dimen/layout_height"
            android:layout_toEndOf="@id/tv_billType"
            android:background="@drawable/selector_tv_border_red"
            android:padding="@dimen/dimen_2"
            android:text="@string/submitted_or_voided"
            android:textColor="@color/red"
            android:textSize="@dimen/text_14"
            android:visibility="gone"
            />
    </RelativeLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_guider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:id="@+id/ll_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_3" />

    </LinearLayout>

</LinearLayout>
