<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin">

        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_"/>

        <EditText
            android:id="@+id/et_barcode"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btn_ok"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:text="@string/confirm"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        >

        <TextView
            android:id="@+id/btn_import"
            android:background="@drawable/selector_btn_bg_theme"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/dimen_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_pre_scan"
            />

    </LinearLayout>

</LinearLayout>