<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        layout="@layout/titlebar_base"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="top"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/layout_margin"
        android:orientation="vertical" >

        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ftp_wifi_state"
            android:textSize="@dimen/text_23"
            />

        <TextView
            android:id="@+id/wifi_state"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_20"
            />

        <ImageView
            android:id="@+id/wifi_state_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            android:src="@mipmap/ftp_wifi_state4" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/instruction_pre"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ftp_instruction_pre"
            android:visibility="gone" />

        <TextView
            android:id="@+id/instruction"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ftp_instruction" />

        <TextView
            android:id="@+id/ip_address"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/selector_btn_bg_theme"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="11111111"
            android:textSize="@dimen/text_20"
            />

        <LinearLayout
            android:id="@+id/start_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_height"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin">

            <TextView
                android:id="@+id/start_stop_button_text"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawablePadding="10dip"
                android:gravity="center"
                android:textSize="@dimen/text_23"
                android:text="22222222"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
