<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/theme_bg"
    android:orientation="vertical">

    <include
        layout="@layout/titlebar_scan"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="top" />

    <RelativeLayout
        android:id="@+id/rl_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        />

    <LinearLayout
        android:id="@+id/lin_layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/list_header_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_0"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />

        <TextView
            android:id="@+id/tv_1"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />

        <TextView
            android:id="@+id/tv_2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />

        <TextView
            android:id="@+id/tv_3"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />


        <TextView
            android:id="@+id/tv_4"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />


        <TextView
            android:id="@+id/tv_5"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />


        <TextView
            android:id="@+id/tv_6"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />


        <TextView
            android:id="@+id/tv_7"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />

        <TextView
            android:id="@+id/tv_8"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />

        <TextView
            android:id="@+id/tv_9"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_layout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        android:background="@color/list_header_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_11"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />

        <TextView
            android:id="@+id/tv_12"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />

        <TextView
            android:id="@+id/tv_13"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />

        <TextView
            android:id="@+id/tv_14"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />


        <TextView
            android:id="@+id/tv_15"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            style="@style/ListView_Header_Grey" />


    </LinearLayout>

    <com.supoin.framesdk.widget.PullToRefreshListView
        android:id="@+id/listview_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_marginRight="@dimen/dimen_5"
        android:divider="@color/transparent"
        android:dividerHeight="0dip"
        android:listSelector="@color/transparent"
        android:paddingBottom="@dimen/dimen_5"
        android:paddingTop="@dimen/dimen_2"
        android:scrollbars="none"
        app:ptrOverScroll="false" >
    </com.supoin.framesdk.widget.PullToRefreshListView>

    <LinearLayout
        android:id="@+id/ll_bottom_qty"
        android:layout_margin="@dimen/layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_1"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="合计：" />

        <TextView
            android:id="@+id/tv_value_1"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0" />

        <TextView
            android:id="@+id/tv_value_2"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_3" />

    </LinearLayout>

</LinearLayout>
